--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,3 +8,26 @@ $color_scheme: '{{ site.color_scheme }}';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Merriweather:wght@400;700&display=swap');
 @import "custom";
 
+/* =========================
+   Project image gallery
+   ========================= */
+
+.project-gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 1.25rem;
+}
+
+.project-image-wrapper {
+  width: 100%;
+  aspect-ratio: 4 / 3;   // uniform size
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.project-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;    // key line
+  display: block;
+}
