--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,6 +4,10 @@ layout: default
 
 <h1>{{ page.title }}</h1>
 
+{% if page.description %}
+  <p class="project-description">{{ page.description }}</p>
+{% endif %}
+
 {% if page.images %}
   <div class="project-gallery">
     {% for img in page.images %}
